# MyStreamSystemInfoPanelPlugin

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
.github/workflows/: ci.yml  release.yml
src/: panel_plugin.cpp
tools/: package_plugin.py  validate_plugin.py
